# rpa-studio

./: .gitignore  README.md  RPA_Studio_操作SOP.docx  main.py  pyproject.toml  requirements.txt  run_cli.py  start.bat  使用SOP.md
core/: __init__.py  actions_bootstrap.py  dpi.py  engine_api.py  headless.py  heal.py  hotkey.py  registry.py  runner.py  scheduler.py  schema.py  store.py  variables.py  vault.py  window.py
docs/: phase2_spec.md
engines/: __init__.py
engines/comms/: __init__.py  actions.py  email_send.py  sharepoint.py
engines/data/: __init__.py  actions.py  excel_ops.py  robust_loader.py
engines/desktop/: __init__.py  actions.py  locators.py  recorder.py  session.py
engines/flow/: __init__.py  actions.py
engines/triggers/: __init__.py  file_watcher.py
engines/vision/: __init__.py  image_match.py  ocr.py
engines/web/: __init__.py  actions.py  contracts.py  locators.py  recorder.py  session.py
flows/: desktop_demo.json  sample_web_login.json  web_download_demo.json  web_query_demo.json
mock/: __init__.py  server.py
tests/: test_comms_smoke.py  test_data_smoke.py  test_desktop_smoke.py  test_flow_actions_smoke.py  test_graph_smoke.py  test_heal_smoke.py  test_record_ui_smoke.py  test_recorder_smoke.py  test_report_smoke.py  test_ui_phase3_smoke.py  test_ui_smoke.py  test_unattended_smoke.py  test_v2_orchestration_smoke.py  test_v2_recording_polish_smoke.py  test_vision_smoke.py  test_web_smoke.py
tools/: ui_shots.py
ui/: __init__.py  flow_edit_ops.py  main_window.py  overlay.py  run_worker.py  schtasks_ops.py  style.py  widgets.py
(+10 files in other folders)
